--- a/src/app/HTMLs/how-to-play.html
+++ b/src/app/HTMLs/how-to-play.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-      <div class="col-7">
+      <div class="cell-7">
         <div class="box">
             <div class="text-bold fg-light display1">¿Cómo Jugar?</div>
             <div class="content fg-white">
@@ -12,7 +12,7 @@
                 <hr>
                 <p><img src="https://images.habbo.com/c_images/HowToPlay/ask_friend_es.png" alt="Pedir Amistad" class="float-right"></p>
                 <h3>Hacer amigos</h3>
-                <p>¡Haz clic sobre un Xukys y pídele amistad o dale respetos!</p>
+                <p>¡Haz clic sobre un Habbo y pídele amistad o dale respetos!</p>
                 <hr>
                 <p><img src="https://images.habbo.com/c_images/HowToPlay/gamehub_es.png" alt="Central de Juegos" class="float-right"></p>
                 <h3>Visita salas de juegos</h3>
@@ -23,8 +23,8 @@
                 <p>¡Ve a la tienda de Duckets y mira qué puedes conseguir gratis por tus Duckets!</p>
                 <hr>
                 <h3>Échale un ojo a las actividades</h3>
-                <p>¡En la <a routerLink="/">Home</a> encontrarás las últimas noticias, competiciones y eventos generales de Xukys!</p>
-                <p>¡Una vez que hayas hecho un poco de todo esto estarás en camino de ser un auténtico Xukys ciudadano!</p>
+                <p>¡En la <a routerLink="/">Home</a> encontrarás las últimas noticias, competiciones y eventos generales de Habbo!</p>
+                <p>¡Una vez que hayas hecho un poco de todo esto estarás en camino de ser un auténtico Habbo ciudadano!</p>
             </div>
         </div>
       </div>
