--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -1,39 +1,35 @@
-<div class="container">
+<div class="container-fluid arctic-wrapper">
   <div class="row">
-    <div class="col flex-justify-center">
-      <div class="row">
-        <div class="col">
-            <div class="box">
-              <div class="title fg-white">Últimas Noticias</div>
-              <div class="content">
-                <div data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
-                  <div class="slide" data-cover="../../assets/images/article_webPromohorse.png">
-                    <div class="promo">
-                      <div class="title">aXDR is getting a bit angular!</div>
-                      <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
-                      <div class="actions">
-                        <button class="button habbo drop-shadow">Play!</button>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="slide" data-cover="../../assets/images/attic15_furni_promo.png">
-                    <div class="promo">
-                      <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
-                      <div class="summary">Multiple hotels are joining together to become a greater community...</div>
-                      <div class="actions">
-                        <button class="button habbo drop-shadow">Read More...</button>
-                      </div>
-                    </div>
-                  </div>
+    <div class="cell">
+      <div class="box">
+        <div class="title fg-white">Últimas Noticias</div>
+        <div class="content">
+          <div data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
+            <div class="slide" data-cover="../../assets/images/article_webPromohorse.png">
+              <div class="promo">
+                <div class="title">aXDR is getting a bit angular!</div>
+                <div class="summary">aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...</div>
+                <div class="actions">
+                  <button class="button habbo drop-shadow">Play!</button>
                 </div>
               </div>
+            </div>
+            <div class="slide" data-cover="../../assets/images/attic15_furni_promo.png">
+              <div class="promo">
+                <div class="title">Xukys, HabboDM all under Hornet Devs!</div>
+                <div class="summary">Multiple hotels are joining together to become a greater community...</div>
+                <div class="actions">
+                  <button class="button habbo drop-shadow">Read More...</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="col-3">
-          <div class="box">
-            <div class="title fg-white">Publicidad</div>
-          </div>
-        </div>
+      </div>
+    </div>
+    <div class="cell-3">
+      <div class="box">
+        <div class="title fg-white">Publicidad</div>
       </div>
     </div>
   </div>
