--- a/src/app/HTMLs/community.html
+++ b/src/app/HTMLs/community.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container-fluid p-5">
   <div class="row">
-    <div class="col">
+    <div class="cell">
         <div @fadeIn data-role="carousel" data-controls="false" data-effect="fade" data-bullets-style="circle" data-bullets-size="small" data-auto-start="true" data-bullets-position="right" >
           <div class="slide" data-cover="../../assets/images/article_webPromohorse.png">
             <div class="promo">
@@ -22,7 +22,7 @@
           </div>
         </div>
     </div>
-    <div class="col-3">
+    <div class="cell-3">
       <div class="box">
         <div class="title fg-white">Publicidad</div>
       </div>
