--- a/src/app/HTMLs/settings.html
+++ b/src/app/HTMLs/settings.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-fluid arctic-wrapper p-5">
   <div class="row">
-    <div class="col">
-      <div class="box fg-light">
-        <div class="title">Ajustes de Privacidad</div>
-        <div class="content">
+    <div class="cell">
+      <div class="box">
+        <div class="title fg-white">Ajustes de Privacidad</div>
+        <div class="content fg-white">
           <div class="row">
             <div class="col">
               <form action="">
@@ -44,15 +44,15 @@
                   </div>
               </form>
             </div>
-            <div class="col">
-              <div class="box darkTransparent fg-light">
-                <div class="title">¿NECESITAS AYUDA?</div>
-                <div class="content">
-                    Consulta cómo puedes echarte un cable o pedir ayuda en nuestro apartado de <b>Atención al Usuario</b>. También incluye una lista de números de teléfono y páginas web en caso de que necesites hablar con alguien. Si no encuentras una respuesta adecuada en esta página, ponte en contacto con el <b>Ayudante de Habbo</b>.
-                </div>
-              </div>
-            </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="cell">
+      <div class="box darkTransparent fg-light">
+        <div class="title">¿NECESITAS AYUDA?</div>
+        <div class="content">
+            Consulta cómo puedes echarte un cable o pedir ayuda en nuestro apartado de <b>Atención al Usuario</b>. También incluye una lista de números de teléfono y páginas web en caso de que necesites hablar con alguien. Si no encuentras una respuesta adecuada en esta página, ponte en contacto con el <b>Ayudante de Habbo</b>.
         </div>
       </div>
     </div>
