--- a/src/app/components/other/header/header.component.css
+++ b/src/app/components/other/header/header.component.css
@@ -1,89 +1,69 @@
-header div.mainNavigator {
-    background: #777;
-    background: -webkit-linear-gradient(to bottom, #9e9e9e, #777);
-    background: linear-gradient(to bottom, #9e9e9e, #777);
-    box-shadow: 1px 0px 8px 2px rgba(0, 0, 0, 0.5);
-    height: 80px;
-    width: 100%;
-    position: relative;
-    z-index: 1;
-    display: -webkit-inline-box;
-  }
-  header div.mainNavigator div.logo {
-    border-right: 1px solid #9e9e9e;
-    box-shadow: 1px 0 0 #6f6f6f;
-    width: 160px;
-    height: 100%;
-    background: url(../../../../assets/images/xukys-sm-logo.png) center center no-repeat;
-    float: left;
-    position: relative;
-    padding: 0 5px;
-  }
-  header div.mainNavigator ul.menu {
-    display: -webkit-inline-box;
-    width: 100%;
-  }
-  header div.mainNavigator ul.menu li {
-    list-style: none;
-    margin: 0 15px;
-    line-height: 80px;
-  }
-  header div.mainNavigator ul.menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 14pt;
-  }
-  header div.mainNavigator.orange {
-    background: #c36300;
-    background: -webkit-linear-gradient(to bottom, #ff8d00, #c36300);
-    background: linear-gradient(to bottom, #ff8d00, #c36300);
-  }
-  header div.mainNavigator.orange > div.logo {
-    border-right: 1px solid #ff7b1e;
-    box-shadow: 1px 0 0 #b95700;
-  }
-  header div.mainNavigator.darken {
-    background: #1f1f1f;
-  }
-  header div.mainNavigator.darken > div.logo {
-    border-right: 1px solid #1d1d1d;
-    box-shadow: 1px 0 0 #212121;
-  }
-  header div.mainNavigator.darkBlue {
-    background: #001629;
-    background: -webkit-linear-gradient(to bottom, #003f75, #001629);
-    background: linear-gradient(to bottom, #003f75, #001629)
-  }
-  header div.mainNavigator.darkBlue > div.logo {
-    border-right: 1px solid #0a335a;
-    box-shadow: 1px 0 0 #002140;
-  }
-  header div.mainNavigator.blue {
-    background: #015cab;
-    background: -webkit-linear-gradient(to bottom, #259aff, #015cab);
-    background: linear-gradient(to bottom, #259aff, #015cab)
-  }
-  header div.mainNavigator.blue > div.logo {
-    border-right: 1px solid #1f7ed8;
-    box-shadow: 1px 0 0 #0466c1;
-  }
-  header div.subNavigator {
-    background: #171717;
-  }
-  header div.subNavigator ul.menu {
-    display: -webkit-inline-box;
-    width: 100%;
-  }
-  header div.subNavigator ul.menu li {
-    list-style: none;
-    margin: 0 15px;
-    line-height: 30px;
-  }
-  header div.subNavigator ul.menu li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    font-size: 10pt;
-    text-transform: uppercase;
-  }  
+/* Arctic NEW UI! */
+.arctic-header {
+  background: #001629;
+  background: -webkit-linear-gradient(to bottom, #003f75, #001629);
+  background: linear-gradient(to bottom, #003f75, #001629);
+  box-shadow: 0px 0px 5px 1px black;
+  z-index: 2;
+}
+
+.arctic-header.darken {
+  background: #1f1f1f;
+}
+
+.arctic-subHeader {
+  background: #171717;  
+}
+
+.arctic-logo {
+  border-right: 1px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 1px 0 0 rgba(64, 64, 64, 0.5);
+  height: 57px;
+  overflow: hidden;
+}
+
+.arctic-logo > img {
+  margin: 8px 0;
+}
+
+.arctic-cell-menu {
+  line-height: 57px;
+}
+
+ul.arctic-menu, ul.arctic-subMenu {
+  background: transparent;
+}
+
+ul.arctic-menu > li, ul.arctic-subMenu > li {
+
+}
+
+ul.arctic-menu > li:hover, ul.arctic-subMenu > li:hover {
+  background: none;
+}
+
+ul.arctic-menu > li > a, ul.arctic-subMenu > li > a {
+  color: white;
+  padding: 0;
+  font-weight: bold;
+}
+
+ul.arctic-menu > li > a {
+  font-size: 14pt;
+  margin: 0px 10px;
+  text-shadow: 0px 2px 3px black;
+}
+
+ul.arctic-menu > li > a:hover {
+  text-shadow: 0px 1px 3px #887c7c;
+}
+
+ul.arctic-menu > li > a.arctic-disabled {
+  cursor: default;
+  color: rgba(255, 255, 255, 0.55) !important;
+}
+
+ul.arctic-subMenu > li > a {
+  margin: 2px 10px;
+  font-size: 10pt;
+}
