--- a/src/assets/css/login.component.css
+++ b/src/assets/css/login.component.css
@@ -9,15 +9,14 @@
 }
 
 .logo {
-    background: url('../../../../assets/images/xukys-sm-logo.png') -8px -33px;
+    background: url('../images/habbologo_blackR.gif') -8px -33px;
     height: 60px;
     width: 140px;
 }
 
 
 .hotel-view {
-    height: 100%;
-    background: url('http://habboo-a.akamaihd.net/c_images/reception/default_new_bg_right.png') no-repeat 100% 100%;
+    background: url(http://habboo-a.akamaihd.net/c_images/reception/default_new_bg_right.png) no-repeat 100% 0;
 }
 
 form.login {
