--- a/src/styles.css
+++ b/src/styles.css
@@ -93,10 +93,7 @@ html {
   ::-webkit-scrollbar-corner {
 	background-color: transparent;
   }
-  ul {
-	margin: 0;
-	padding: 0;
-  }
+  
   hr {
 	border-width: 0 0 8px;
     clear: both;
@@ -105,206 +102,15 @@ html {
 	border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2 1"><circle fill="hsla(0, 0%, 0%, 0.3)" cx="1" cy="0.3" r="0.3"/></svg>') 0 0 100% repeat;
 	border-style: inset;
 	background-color: transparent;
-	}
-	.guest-container {
-		width: 100%;
-		min-height: 100%;
-		background: #070d19;
-		background-image: url(./assets/images/bg_texture.out.png);
-		background: radial-gradient(circle at center, #00528c, #070d19);
-	}
-  .container {
-	width: 100%;
-	margin-right: auto;
-	margin-left: auto;
   }
-  .container-fluid {
-	width: 100%;
-	padding-right: 15px;
-	padding-left: 15px;
-	margin-right: auto;
-	margin-left: auto;
+
+  span.flashy-arrow {
+    background: url('./assets/images/flashy_arrow.gif') no-repeat;
+    height: 9px;
+    width: 17px;
+    display: inline-block;
   }
-  .row {
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-right: -15px;
-	margin-left: -15px;
-  }
-  .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
-	position: relative;
-	width: 100%;
-	padding-right: 15px;
-	padding-left: 15px;
-  }
-  .col {
-	-ms-flex-preferred-size: 0;
-	flex-basis: 0;
-	-ms-flex-positive: 1;
-	flex-grow: 1;
-	max-width: 100%;
-  }
-  .col-auto {
-	-ms-flex: 0 0 auto;
-	flex: 0 0 auto;
-	width: auto;
-	max-width: 100%;
-  }
-  .col-1 {
-	-ms-flex: 0 0 8.33333%;
-	flex: 0 0 8.33333%;
-	max-width: 8.33333%;
-  }
-  .col-2 {
-	-ms-flex: 0 0 16.66667%;
-	flex: 0 0 16.66667%;
-	max-width: 16.66667%;
-  }
-  .col-3 {
-	-ms-flex: 0 0 25%;
-	flex: 0 0 25%;
-	max-width: 25%;
-  }
-  .col-4 {
-	-ms-flex: 0 0 33.33333%;
-	flex: 0 0 33.33333%;
-	max-width: 33.33333%;
-  }
-  .col-5 {
-	-ms-flex: 0 0 41.66667%;
-	flex: 0 0 41.66667%;
-	max-width: 41.66667%;
-  }
-  .col-6 {
-	-ms-flex: 0 0 50%;
-	flex: 0 0 50%;
-	max-width: 50%;
-  }
-  .col-7 {
-	-ms-flex: 0 0 58.33333%;
-	flex: 0 0 58.33333%;
-	max-width: 58.33333%;
-  }
-  .col-8 {
-	-ms-flex: 0 0 66.66667%;
-	flex: 0 0 66.66667%;
-	max-width: 66.66667%;
-  }
-  .col-9 {
-	-ms-flex: 0 0 75%;
-	flex: 0 0 75%;
-	max-width: 75%;
-  }
-  .col-10 {
-	-ms-flex: 0 0 83.33333%;
-	flex: 0 0 83.33333%;
-	max-width: 83.33333%;
-  }
-  .col-11 {
-	-ms-flex: 0 0 91.66667%;
-	flex: 0 0 91.66667%;
-	max-width: 91.66667%;
-  }
-  .col-12 {
-	-ms-flex: 0 0 100%;
-	flex: 0 0 100%;
-	max-width: 100%;
-  }
-  .order-first {
-	-ms-flex-order: -1;
-	order: -1;
-  }
-  .order-last {
-	-ms-flex-order: 13;
-	order: 13;
-  }
-  .order-0 {
-	-ms-flex-order: 0;
-	order: 0;
-  }
-  .order-1 {
-	-ms-flex-order: 1;
-	order: 1;
-  }
-  .order-2 {
-	-ms-flex-order: 2;
-	order: 2;
-  }
-  .order-3 {
-	-ms-flex-order: 3;
-	order: 3;
-  }
-  .order-4 {
-	-ms-flex-order: 4;
-	order: 4;
-  }
-  .order-5 {
-	-ms-flex-order: 5;
-	order: 5;
-  }
-  .order-6 {
-	-ms-flex-order: 6;
-	order: 6;
-  }
-  .order-7 {
-	-ms-flex-order: 7;
-	order: 7;
-  }
-  .order-8 {
-	-ms-flex-order: 8;
-	order: 8;
-  }
-  .order-9 {
-	-ms-flex-order: 9;
-	order: 9;
-  }
-  .order-10 {
-	-ms-flex-order: 10;
-	order: 10;
-  }
-  .order-11 {
-	-ms-flex-order: 11;
-	order: 11;
-  }
-  .order-12 {
-	-ms-flex-order: 12;
-	order: 12;
-  }
-  .offset-1 {
-	margin-left: 8.33333%;
-  }
-  .offset-2 {
-	margin-left: 16.66667%;
-  }
-  .offset-3 {
-	margin-left: 25%;
-  }
-  .offset-4 {
-	margin-left: 33.33333%;
-  }
-  .offset-5 {
-	margin-left: 41.66667%;
-  }
-  .offset-6 {
-	margin-left: 50%;
-  }
-  .offset-7 {
-	margin-left: 58.33333%;
-  }
-  .offset-8 {
-	margin-left: 66.66667%;
-  }
-  .offset-9 {
-	margin-left: 75%;
-  }
-  .offset-10 {
-	margin-left: 83.33333%;
-  }
-  .offset-11 {
-	margin-left: 91.66667%;
-  }
+
   .box {
 	border-radius: 3px;
 	padding: 10px;
@@ -357,8 +163,13 @@ html {
   }
 
   .button.habbo.blue {
-	background-color: #00608e;
+	  background-color: #00608e;
     border: 2px solid #0499e4;
+  }
+
+  .button.habbo.red {
+    background-color: #bb0539;
+    border: 2px solid #940d24;
   }
 
   .button.habbo:hover {
@@ -367,4 +178,8 @@ html {
 
   .button.habbo.blue:hover {
 	background-color: #0777ad;
+  }
+
+  .button.habbo.red:hover {
+    background-color: #da0b46;
   }
