--- a/src/app/HTMLs/header.html
+++ b/src/app/HTMLs/header.html
@@ -18,7 +18,7 @@
         <div class="row arctic-subHeader py-2">
             <div class="cell">
                 <ul class="h-menu arctic-subMenu">
-                    <li @fadeInOut *ngFor="let subTab of subMenuTabs">
+                    <li @fadeInOut *ngFor="let subTab of menuTabs[2]._children">
                         <a [routerLink]="subTab._path">{{ subTab._title }}</a>
                     </li>
                 
