--- a/src/app/HTMLs/login.html
+++ b/src/app/HTMLs/login.html
@@ -23,7 +23,7 @@
               </div>
               <div class="form-group">
                   <button class="button habbo" type="submit">Ingresar</button>
-                  <button routerLink="/quickregister" class="fg-white button habbo blue float-right">¡Registrarme!</button>
+                  <button routerLink="{{registerLink}}" class="fg-white button habbo blue float-right">¡Registrarme!</button>
               </div>
           </form>
       </div>
