--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -30,6 +30,9 @@
     <div class="cell-3">
       <div class="box">
         <div class="title fg-white">Publicidad</div>
+        <div class="content">
+          <button class="button habbo blue" routerLink="/acp">Go to ACP</button>
+        </div>
       </div>
     </div>
   </div>
