--- a/src/app/components/user/acp/acp.component.html
+++ b/src/app/components/user/acp/acp.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="grid">
     <div class="row admin-body">
-
+      <button class="button habbo blue" routerLink="/">Return</button>
     </div>
   </div>
 </div>
