--- a/src/app/HTMLs/how-to-play.html
+++ b/src/app/HTMLs/how-to-play.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div @fadeIn class="container">
     <div class="row">
       <div class="cell-7">
         <div class="box">
