Parallel Client Beta Test

--- a/src/app/HTMLs/articles.html
+++ b/src/app/HTMLs/articles.html
@@ -1,56 +1,10 @@
-<div class="row">
-  <div class="col">
-    <div class="box">
-      <div class="title fg-white">Todas las noticias</div>
-      <div class="content">
-        <!--<div class="row">
-          <header class="news-category__header">
-            <span>Mostrar noticias sobre:</span>
-            <nav class="news-category__navigation">
-              <ul class="news-category__list">
-                <li class="news-category__item"><a href="/community/category/all" class="news-category__link news-category__link--active">Todo</a></li>
-                <li class="news-category__item"><a href="/community/category/campaigns-activities" class="news-category__link">Campañas y Actividades</a></li>
-                <li class="news-category__item"><a href="/community/category/credit-promo" class="news-category__link">Ofertas especiales</a></li>
-                <li class="news-category__item"><a href="/community/category/fansites" class="news-category__link">Fansites</a></li>
-                <li class="news-category__item"><a href="/community/category/safety" class="news-category__link">Protección y Seguridad</a></li>
-                <li class="news-category__item"><a href="/community/category/technical-updates" class="news-category__link">Actualizaciones Habbo</a></li>
-                <li class="news-category__item"><a href="/community/category/baw" class="news-category__link">Builders At Work</a></li>
-                <li class="news-category__item"><a href="/community/category/ambassadors" class="news-category__link">Embajadores</a></li>
-              </ul>
-            </nav>
-          </header>
-        </div>-->
-        <div class="row">
-          <div class="card image-header w-25 m-5">
-              <div class="card-header fg-white text-bold" style="background-image: url(../../assets/images/article_webPromohorse.png)">
-                  aXDR is getting a bit angular!
-              </div>
-              <div class="card-content p-2">
-                aXDR project, started by Boris Akopov (Xdr) and took by Hornet Team is remaking the system on a different language but same features are held...
-              </div>
-              <div class="card-footer">
-                  <button class="button secondary">Read More</button>
-              </div>
-          </div>
-          <div class="card image-header w-25 m-5">
-              <div class="card-header fg-white text-bold" style="background-image: url(../../assets/images/article_webPromohorse.png)">
-                  Xukys, HabboDM all under Hornet Devs!
-              </div>
-              <div class="card-content p-2">
-                Multiple hotels are joining together to become a greater community...
-              </div>
-              <div class="card-footer">
-                  <button class="button secondary">Read More</button>
-              </div>
-          </div>
+<div class="container">
+    <div class="row">
+      <div class="cell-7">
+        <div class="box">
+          <div class="title fg-light">Publicidad</div>
 
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-3">
-    <div class="box">
-      <div class="title fg-white">Publicidad</div>
-    </div>
-  </div>
 </div>
