--- a/src/app/HTMLs/me.html
+++ b/src/app/HTMLs/me.html
@@ -29,9 +29,12 @@
     </div>
     <div class="cell-3">
       <div class="box">
-        <div class="title fg-white">Publicidad</div>
+        <div class="title fg-white">Botones de Prueba</div>
         <div class="content">
           <button class="button habbo blue" routerLink="/acp">Go to ACP</button>
+          <br>
+          <br>
+          <button class="button habbo green" routerLink="/hotel">Go to Client</button>
         </div>
       </div>
     </div>
