--- a/src/app/HTMLs/user.html
+++ b/src/app/HTMLs/user.html
@@ -1,10 +1,10 @@
 <div class="container-fluid arctic-body h-100">
     <div class="grid mb-0 arctic-grid h-100">
         <div class="row">
-            <app-header></app-header>
+            <app-header *ngIf="!clientShowing"></app-header>
         </div>
-        <div class="row arctic-body {{background}}">
-            <app-side @slideInOut [currentPage]="currentPage" *ngIf="active" class="darken"></app-side>
+        <div class="row arctic-body">
+            <app-side @slideInOut *ngIf="false" class="darken"></app-side>
             <div class="cell p-0 arctic-content">
                 <div class="fg-white"></div>
                 <router-outlet></router-outlet>
@@ -12,3 +12,4 @@
         </div>
     </div>
 </div>
+<app-client class="client-show" [ngClass]="clientShowing ? '' : 'client-hide'"></app-client>
